2009-01-20 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: add missing BuildRequires, conditionalize 
	  libtermcap.so.2 for fedora, change tar requirement to %{tarver}

2009-01-20 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: add %{PERLSITELIB} to %files section to
	  install perl for the client package add "directory mode" to defattr
	  statements where appropriate.

2009-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Use dp->hostnext to scan dles of a host.

2009-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/vfs-device.c: robust_open can return fd 0.

2009-01-19  Tom Robinson <tom.robinson@constantstream.com>
	* server-src/amoverview.pl: fix parsing of filenames containing colons

2009-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-sendrecv.pl: Handle incremental,
	                                     new KEEP-SNAPSHOT property.
	* man/xml-source/amzfs-sendrecv.8.xml: Document it.
	* application-src/teecount.c: New program.
	* application-src/Makefile.am: Add teecount.
	* perl/Amanda/Application/Zfs.pm: Work with 'current' snapshot.
	* common-src/amanda.h: include "safe-read.h"

2009-01-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Don't add 'dump to tape' in the 'dumped'
	                          result.

2009-01-16 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: fix the fedora 10 fix for other distros

2009-01-16  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/vfs-device.c: don't cache the dir_handle, as
	  such caching does not work on some network filesystems

2009-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec: Fix for fedora 10.

2009-01-16  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/amtapetype.pl: remove call to old device function

2009-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Use bitwise NOT for taper_state.
