@@ -1,3 +1,6 @@
+2009-01-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amstatus.pl: Fix use of %free and %qlen keys.
+
 2009-01-20 Dan Locks <dwlocks@zmanda.com>
 	* packaging/rpm/amanda.spec: add missing BuildRequires, conditionalize 
 	  libtermcap.so.2 for fedora, change tar requirement to %{tarver}
